<resources>
    <!-- google map api key -->
    <string name="google_api">AIzaSyDqLwsltPTR2lOU2D7fM38uC52YHzidtzE</string>

    <string name="app_name">StudentAssistant</string>

    <!-- Navigation Drawer related strings-->
    <string name="home">Home</string>
    <string name="routines">Routines</string>
    <string name="books">Books</string>
    <string name="contacts">Contacts</string>
    <string name="notes">Notes</string>
    <string name="map">Maps</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About us</string>
    <string name="nav_header_string">Student Assistant</string>
    <string name="nav_open_drawer">Drawer Open</string>
    <string name="nav_close_drawer">Drawer Closed</string>

    <!--TODO  update blank fragments-->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- routine related strings -->
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="routine_page_string">Click the "+" button to add new Routines</string>
    <string name="start_hint">Start time:</string>
    <string name="end_hint">End time</string>
    <string name="subject_hint">Subject</string>
    <string name="teacher_hint">Lecturer</string>
    <string name="check_box_text">Set alarm</string>
    <string name="current_time_hint">00:00</string>
    <string name="null_item_check">Please input all fields</string>
    <string name="start_time">-- : --</string>

    <!-- Notes related Strings -->
    <string name="notes_headline">Notes</string>
    <string name="create_notes_dialog_title">Create new Note</string>
    <string name="update_notes_dialog_title">Update note</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="empty_page">Click on the \'+\' button to add new notes</string>


    <!--map related strings-->
    <string name="search_bar_hint">Enter Address, City or Zip Code</string>

    <!-- delete dialog message -->
    <string name="delete_dialog_message">Are you sure you want to delete this entry?</string>

    <!-- button strings -->
    <string name="save_button">Save</string>
    <string name="update_button">Update</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="positive_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <!--ContactsFragment related strings-->
    <string name="teachers">Teachers</string>
    <string name="classmates">Classmates</string>
    <string name="others">Others</string>
    <string name="contact_name">Contact Name</string>
    <string name="search_hint">Search contacts</string>

</resources>
