<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:checked="true"
            />

        <item
            android:id="@+id/routines"
            android:title="@string/routines"
            />
        <item
            android:id="@+id/books"
            android:title="@string/books"

            />
        <item
            android:id="@+id/contacts"
            android:title="@string/contacts"

            />
        <item
            android:id="@+id/notes"
            android:title="@string/notes"
            />
        <item android:id="@+id/map"
            android:title="@string/map"/>
    </group>
    <item android:title="@string/support">
        <menu>

            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                />
            <item
                android:id="@+id/feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/about_us"
                android:title="@string/about_us" />

        </menu>
    </item>

</menu>