<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_marginBottom="10dp"
        android:id="@+id/subject_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_hint"
        android:inputType="textAutoComplete" />

    <EditText
        android:layout_marginBottom="10dp"
        android:id="@+id/lecturer_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/teacher_hint"
        android:inputType="textPersonName" />

    <TextView
        android:text="@string/start_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        />

        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/start_time_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_time_hint"
            />

    <TimePicker
        android:id="@+id/routine_alarm_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/time_selected_button"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:text="@string/positive_button"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/check_box_routine_dialog"
        android:text="@string/check_box_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    </LinearLayout>

</ScrollView>
