<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_routine_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    app:cardCornerRadius="4dp"
    android:layout_margin="5dp"
    app:cardElevation="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/routine_bg">

        <TextView
            android:id="@+id/start_time_text"
            android:layout_width="152dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_time"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subject_text_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/subject_hint"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.585" />

        <TextView
            android:id="@+id/lecturer_text_id"
            android:layout_width="179dp"
            android:layout_height="21dp"
            android:layout_marginBottom="8dp"
            android:text="@string/teacher_hint"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject_text_id"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/edit_button_id"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_button_id"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_button_id"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_delete_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>